# InkDrip

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  config.example.toml  docker-compose.yml  justfile  rustfmt.toml
.github/workflows/: docker.yml
docs/logic/: pipeline.md  pipeline.zh-CN.md  scheduling.md  scheduling.zh-CN.md  splitting.md  splitting.zh-CN.md
inkdrip-cli/: Cargo.toml
inkdrip-cli/src/: client.rs  main.rs  output.rs
inkdrip-core/: Cargo.toml
inkdrip-core/src/: config.rs  error.rs  feed.rs  hooks.rs  lib.rs  model.rs  parser.rs  pipeline.rs  scheduler.rs  splitter.rs  store.rs  undo.rs  util.rs  word_count.rs
inkdrip-core/src/parser/: epub.rs  markdown.rs  txt.rs
inkdrip-core/src/splitter/: semantic.rs
inkdrip-server/: Cargo.toml
inkdrip-server/src/: error.rs  main.rs  routes.rs  state.rs
inkdrip-server/src/routes/: aggregates.rs  books.rs  feeds.rs  history.rs
inkdrip-store-sqlite/: Cargo.toml
inkdrip-store-sqlite/src/: lib.rs  migrations.rs
tests/: e2e-config.toml  e2e.py
