[package]
name = "inkdrip-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for InkDrip"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# HTTP client for API calls
reqwest = { version = "0.13", features = ["json", "multipart"] }

# Pretty output
tabled = "0.20"

[lints]
workspace = true
